# kwin-bashark

./: .gitignore  LICENSE  MouseSpark.qml  README.md  main.qml
.github/workflows/: cmake-single-platform.yml
kwin-effect-cursor-halo/: .gitignore  CMakeLists.txt
kwin-effect-cursor-halo/src/: CMakeLists.txt  cursorhalo.cpp  cursorhalo.h  main.cpp  metadata.json  renderhelper.cpp  renderhelper.h
kwin-effect-cursor-halo/test/: CMakeLists.txt  main.cpp
